# ffmpeg-windows

./: .gitignore  README.md
video_to_rtmp/: CMakeLists.txt  main.cpp
webcam_audio_to_rtmp/: CMakeLists.txt  main.cpp
webcam_audio_to_rtmp/include/: AudioRecord.h  AudioRecordFactory.h  DataManager.h  EncodeFactory.h  InputFactory.h  InputStream.h  OutputStream.h  VideoCapture.h  VideoCaptureFactory.h  data_manager.h  video_capture.h
webcam_audio_to_rtmp/src/: AudioRecord.cpp  AudioRecordFactory.cpp  DataManager.cpp  EncodeFactory.cpp  InputStream.cpp  IntputFactory.cpp  OutputStream.cpp  VideoCapture.cpp  VideoCaptureFactory.cpp
webcam_to_rtmp/: main.cpp
webcam_to_rtmp/include/: pch.h
